@@ -21,30 +21,50 @@ SET(OPENJPEG_SRCS
   tgt.c
   opj_convert.c
 )
+
 IF(LCMS_INCLUDE_DIR)
   INCLUDE_DIRECTORIES( ${LCMS_INCLUDE_DIR} )
 ENDIF(LCMS_INCLUDE_DIR)
-# Pass proper definition to preprocessor to generate shared lib
-IF(WIN32)
-  IF(BUILD_SHARED_LIBS)
-    ADD_DEFINITIONS(-DOPJ_EXPORTS)
-  ELSE(BUILD_SHARED_LIBS)
-    ADD_DEFINITIONS(-DOPJ_STATIC)
-  ENDIF(BUILD_SHARED_LIBS)
-ENDIF(WIN32)
 
-# Create the library
-ADD_LIBRARY(${OPENJPEG_LIBRARY_NAME} ${OPENJPEG_SRCS})
-SET_TARGET_PROPERTIES(${OPENJPEG_LIBRARY_NAME} PROPERTIES
-	${OPENJPEG_LIBRARY_PROPERTIES})
+# Build the static library
+IF(WIN32)
+  ADD_DEFINITIONS(-DOPJ_STATIC)
+ENDIF(WIN32)
+ADD_LIBRARY(${OPENJPEG_LIBRARY_NAME}.static STATIC ${OPENJPEG_SRCS})
+SET_TARGET_PROPERTIES(${OPENJPEG_LIBRARY_NAME}.static PROPERTIES OUTPUT_NAME ${OPENJPEG_LIBRARY_NAME})
+SET_TARGET_PROPERTIES(${OPENJPEG_LIBRARY_NAME}.static PROPERTIES ${OPENJPEG_LIBRARY_PROPERTIES})
 IF(LCMS_LIB)
-  TARGET_LINK_LIBRARIES(${OPENJPEG_LIBRARY_NAME} ${LCMS_LIB})
+  TARGET_LINK_LIBRARIES(${OPENJPEG_LIBRARY_NAME}.static ${LCMS_LIB})
 ENDIF(LCMS_LIB)
 # Install library
-INSTALL(TARGETS ${OPENJPEG_LIBRARY_NAME}
+INSTALL(TARGETS ${OPENJPEG_LIBRARY_NAME}.static
   EXPORT OpenJPEGTargets
-	DESTINATION ${OPENJPEG_INSTALL_LIB_DIR} COMPONENT Libraries
+  DESTINATION ${OPENJPEG_INSTALL_LIB_DIR} COMPONENT Libraries
 )
+
+# If BUILD_SHARED_LIBS is ON, also build the shared library
+IF(BUILD_SHARED_LIBS)
+  # replace flag for static build with flag for shared build
+  IF(WIN32)
+    REMOVE_DEFINITIONS(-DOPJ_STATIC)
+    ADD_DEFINITIONS(-DOPJ_EXPORTS)
+  ENDIF(WIN32)
+  # Create the shared library
+  ADD_LIBRARY(${OPENJPEG_LIBRARY_NAME}.shared SHARED ${OPENJPEG_SRCS})
+  SET_TARGET_PROPERTIES(${OPENJPEG_LIBRARY_NAME}.shared PROPERTIES OUTPUT_NAME ${OPENJPEG_LIBRARY_NAME})
+  SET_TARGET_PROPERTIES(${OPENJPEG_LIBRARY_NAME}.shared PROPERTIES ${OPENJPEG_LIBRARY_PROPERTIES})
+  IF(LCMS_LIB)
+    TARGET_LINK_LIBRARIES(${OPENJPEG_LIBRARY_NAME}.shared ${LCMS_LIB})
+  ENDIF(LCMS_LIB)
+  # Install library
+  INSTALL(TARGETS ${OPENJPEG_LIBRARY_NAME}.shared
+    EXPORT OpenJPEGTargets
+    DESTINATION ${OPENJPEG_INSTALL_LIB_DIR} COMPONENT Libraries
+  )
+  IF(WIN32)
+    REMOVE_DEFINITIONS(-DOPJ_EXPORTS)
+  ENDIF(WIN32)
+ENDIF(BUILD_SHARED_LIBS)
 
 # Install includes files
 INSTALL(FILES openjpeg.h
